	PR target/39063 	* libgcc2.c (mprotect): Do not use signed arguments for 	VirtualProtect, use DWORD arguments.  Also fix the 'may 	be used uninitialized' warning for the np variable.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144957 138bc75d-0d04-0410-961f-82ee72b054a4